--- a/AI-ML/Lab stuff/Count Vectorizer.ipynb
+++ b/AI-ML/Lab stuff/Count Vectorizer.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "11b6ae07",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "aa38d07d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "a347f141",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "55a3a2d1",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "b0975683",
    "metadata": {},
    "outputs": [],
@@ -146,19 +146,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f19fd2a2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'x_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m xtrain_dtm \u001b[38;5;241m=\u001b[39m cv\u001b[38;5;241m.\u001b[39mfit_transform(x_train)\n\u001b[0;32m      2\u001b[0m xtest_dtm \u001b[38;5;241m=\u001b[39m cv\u001b[38;5;241m.\u001b[39mtransform(x_test)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTotal features extracted using CountVectorizer \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mxtrain_dtm\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'x_train' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total features extracted using CountVectorizer 48\n",
+      "Features for first 5 training instances are listed below:\n",
+      "   about  am  amazing  an  and  awesome  beers  boss  can  deal  ...  tired   \n",
+      "0      0   0        0   0    0        0      0     0    0     0  ...      0  \\\n",
+      "1      1   0        0   0    0        0      1     0    0     0  ...      0   \n",
+      "2      0   0        0   0    0        0      0     0    0     0  ...      0   \n",
+      "3      0   0        0   0    0        0      0     0    0     0  ...      0   \n",
+      "4      0   0        1   1    0        0      0     0    0     0  ...      0   \n",
+      "\n",
+      "   to  today  tomorrow  very  we  went  what  will  with  \n",
+      "0   1      1         0     0   0     1     0     0     0  \n",
+      "1   0      0         0     1   0     0     0     0     0  \n",
+      "2   0      0         0     0   0     0     1     0     0  \n",
+      "3   0      0         0     0   0     0     0     0     0  \n",
+      "4   0      0         0     0   0     0     0     0     0  \n",
+      "\n",
+      "[5 rows x 48 columns]\n"
      ]
     }
    ],
@@ -167,7 +179,7 @@
     "xtest_dtm = cv.transform(x_test)\n",
     "print(f\"Total features extracted using CountVectorizer {xtrain_dtm.shape[1]}\")\n",
     "print(f\"Features for first 5 training instances are listed below:\")\n",
-    "df = pd.DataFrame(xtrain_dtm.toarray(), columns = cv.get_features_names_out())\n",
+    "df = pd.DataFrame(xtrain_dtm.toarray(), columns = cv.get_feature_names_out())\n",
     "print(df.head())"
    ]
   },
