--- a/AI-ML/Lab stuff/NB.ipynb
+++ b/AI-ML/Lab stuff/NB.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.navie_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn import metrics\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split as split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,23 +29,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Metrics: 0.9666666666666667\n",
+      "Confusion matrix\n",
+      "[[11  0  0]\n",
+      " [ 0 12  1]\n",
+      " [ 0  0  6]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy Metrics:\", metrics.accuracy_score(y_test, y_pred))\n",
     "print(\"Confusion matrix\")\n",
-    "print(metrics.Confusion_matrix(y_test, y_pred))"
+    "print(metrics.confusion_matrix(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cancer dataset\n",
-    "from sklearn.navie_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split"
@@ -53,9 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Metrics: 0.9590643274853801\n",
+      "Confusion matrix\n",
+      "[[65  5]\n",
+      " [ 2 99]]\n"
+     ]
+    }
+   ],
    "source": [
     "cancer = load_breast_cancer()\n",
     "x = cancer.data\n",
@@ -66,15 +89,29 @@
     "clf = gnb.fit(x_train, y_train)\n",
     "predicted = clf.predict(x_test)\n",
     "\n",
-    "print(\"Accuracy Metrics:\", metrics.accuracy_score(y_test, y_pred))\n",
+    "print(\"Accuracy Metrics:\", metrics.accuracy_score(y_test, predicted))\n",
     "print(\"Confusion matrix\")\n",
-    "print(metrics.Confusion_matrix(y_test, y_pred))"
+    "print(metrics.confusion_matrix(y_test, predicted))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
