--- a/AI-ML/Lab stuff/Logistic Regression.ipynb
+++ b/AI-ML/Lab stuff/Logistic Regression.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b41c29ee",
    "metadata": {},
    "outputs": [],
@@ -35,9 +35,9 @@
     "x = iris.data\n",
     "y = iris.target\n",
     "x_train,x_test,y_train,y_test = train_test_split(x,y,test_size=0.3,random_state = 0)\n",
-    "scaler = StandardScaler()\n",
-    "x_train = scaler.fit_transform(x_train)\n",
-    "x_test = scaler.transform(x_test)\n",
+    "# scaler = StandardScaler()\n",
+    "# x_train = scaler.fit_transform(x_train)\n",
+    "# x_test = scaler.transform(x_test)\n",
     "\n",
     "#Create a logistic regression model\n",
     "model = LogisticRegression()"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f54cdd18",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9cc327c5",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f0649ac3",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
