--- a/AI-ML/Lab stuff/Count Vectorizer.ipynb
+++ b/AI-ML/Lab stuff/Count Vectorizer.ipynb
@@ -72,17 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "11b6ae07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "id": "aa38d07d",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "id": "a347f141",
    "metadata": {},
    "outputs": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "55a3a2d1",
    "metadata": {},
    "outputs": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "b0975683",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "f19fd2a2",
    "metadata": {},
    "outputs": [
@@ -154,23 +155,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total features extracted using CountVectorizer 48\n",
+      "Total features extracted using CountVectorizer 46\n",
       "Features for first 5 training instances are listed below:\n",
-      "   about  am  amazing  an  and  awesome  beers  boss  can  deal  ...  tired   \n",
-      "0      0   0        0   0    0        0      0     0    0     0  ...      0  \\\n",
-      "1      1   0        0   0    0        0      1     0    0     0  ...      0   \n",
-      "2      0   0        0   0    0        0      0     0    0     0  ...      0   \n",
-      "3      0   0        0   0    0        0      0     0    0     0  ...      0   \n",
-      "4      0   0        1   1    0        0      0     0    0     0  ...      0   \n",
+      "   about  am  amazing  an  awesome  bad  beers  best  boss  can  ...  to   \n",
+      "0      0   0        0   0        0    0      0     0     0    0  ...   0  \\\n",
+      "1      0   0        0   0        0    1      0     0     0    0  ...   1   \n",
+      "2      0   0        0   0        0    0      0     0     0    0  ...   0   \n",
+      "3      0   0        0   1        1    0      0     0     0    0  ...   0   \n",
+      "4      0   0        0   0        0    0      0     0     0    1  ...   0   \n",
       "\n",
-      "   to  today  tomorrow  very  we  went  what  will  with  \n",
-      "0   1      1         0     0   0     1     0     0     0  \n",
-      "1   0      0         0     1   0     0     0     0     0  \n",
-      "2   0      0         0     0   0     0     1     0     0  \n",
-      "3   0      0         0     0   0     0     0     0     0  \n",
-      "4   0      0         0     0   0     0     0     0     0  \n",
+      "   today  tomorrow  very  we  went  what  will  with  work  \n",
+      "0      0         0     0   0     0     0     0     0     0  \n",
+      "1      0         0     0   0     0     0     0     0     0  \n",
+      "2      0         1     0   1     0     0     1     0     0  \n",
+      "3      0         0     0   0     0     0     0     0     0  \n",
+      "4      0         0     0   0     0     0     0     1     0  \n",
       "\n",
-      "[5 rows x 48 columns]\n"
+      "[5 rows x 46 columns]\n"
      ]
     }
    ],
@@ -185,11 +186,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "e1a3be18",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification results of testing samples are given below\n",
+      "I do not like the taste of this juice->neg\n",
+      "What an awesome view->pos\n",
+      "I am sick and tired of this place->neg\n",
+      "I do not like this restaurant->pos\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "clf = MultinomialNB().fit(xtrain_dtm, y_train)\n",
+    "print(\"Classification results of testing samples are given below\")\n",
+    "y_pred = clf.predict(xtest_dtm)\n",
+    "for doc, p in zip(x_test, y_pred):\n",
+    "    pred = 'pos' if p == 1 else 'neg'\n",
+    "    print(f\"{doc}->{pred}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "da575e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.75\n",
+      "Confusion Matrix = \n",
+      " [[2 1]\n",
+      " [0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(len(x_test), len(y_pred))\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "print(\"Accuracy = \", accuracy)\n",
+    "print(\"Confusion Matrix = \\n\", conf_matrix)\n"
+   ]
   }
  ],
  "metadata": {
