--- a/AI-ML/Lab stuff/PCA.ipynb
+++ b/AI-ML/Lab stuff/PCA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "bbcbbe4e",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "c225c772",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "a2dda0b5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "67306772",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "b43ea6ad",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "59aaa748",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "ea199b7b",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "41f407b4",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "348d5b59",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "d306e468",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "2af0ba9e",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "8cc09af7",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "b9262091",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "ebbe252b",
    "metadata": {},
    "outputs": [],
@@ -944,40 +944,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "a0f75b79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.09706398, -2.07333501,  1.26993369, ...,  2.29607613,\n",
-       "         2.75062224,  1.93701461],\n",
-       "       [ 1.82982061, -0.35363241,  1.68595471, ...,  1.0870843 ,\n",
-       "        -0.24388967,  0.28118999],\n",
-       "       [ 1.57988811,  0.45618695,  1.56650313, ...,  1.95500035,\n",
-       "         1.152255  ,  0.20139121],\n",
-       "       ...,\n",
-       "       [ 0.70228425,  2.0455738 ,  0.67267578, ...,  0.41406869,\n",
-       "        -1.10454895, -0.31840916],\n",
-       "       [ 1.83834103,  2.33645719,  1.98252415, ...,  2.28998549,\n",
-       "         1.91908301,  2.21963528],\n",
-       "       [-1.80840125,  1.22179204, -1.81438851, ..., -1.74506282,\n",
-       "        -0.04813821, -0.75120669]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scaled_data"
+    "# scaled_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "8e95d18a",
    "metadata": {},
    "outputs": [],
@@ -987,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "e66b40ef",
    "metadata": {},
    "outputs": [],
@@ -997,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "06044a53",
    "metadata": {},
    "outputs": [
@@ -1414,7 +1391,7 @@
        "PCA(n_components=2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "d5223fe5",
    "metadata": {},
    "outputs": [],
@@ -1435,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "129ceb0d",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1422,7 @@
        "(569, 30)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "f6400a06",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1443,7 @@
        "(569, 2)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "1754806c",
    "metadata": {},
    "outputs": [
@@ -1499,7 +1476,7 @@
        "        -0.04813821, -0.75120669]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "dedec784",
    "metadata": {},
    "outputs": [
@@ -1526,7 +1503,7 @@
        "       [-5.4752433 , -0.67063679]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "4367d625",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1524,7 @@
        "Text(0, 0.5, 'Second principle component')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1574,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "1f2366aa",
    "metadata": {},
    "outputs": [
