--- a/AI-ML/Lab stuff/10.Support Vector Machine Final.ipynb
+++ b/AI-ML/Lab stuff/10.Support Vector Machine Final.ipynb
@@ -60,9 +60,9 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "# Standardize the features\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "# scaler = StandardScaler()\n",
+    "# X_train = scaler.fit_transform(X_train)\n",
+    "# X_test = scaler.transform(X_test)\n",
     "\n",
     "# Create and train the SVM model\n",
     "model = SVC(kernel='linear', C = 2)\n",
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
