--- a/AI-ML/Lab stuff/LDA.ipynb
+++ b/AI-ML/Lab stuff/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "03431f85",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "82d150e5",
    "metadata": {},
    "outputs": [
@@ -47,9 +47,9 @@
     "\n",
     "# Standardizet the features\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "x_train = scaler.fit_transform(x_train)\n",
-    "x_test = scaler.transform(x_test)\n",
+    "# scaler = StandardScaler()\n",
+    "# x_train = scaler.fit_transform(x_train)\n",
+    "# x_test = scaler.transform(x_test)\n",
     "                         \n",
     "# Step5 fit the LDA model\n",
     "lda = LinearDiscriminantAnalysis()\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c1f8d8ca",
    "metadata": {},
    "outputs": [
