--- a/AI-ML/Lab stuff/practice.ipynb
+++ b/AI-ML/Lab stuff/practice.ipynb
@@ -764,11 +764,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AdaBoost"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split as spl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_iris()\n",
+    "x = data.data\n",
+    "y = data.target\n",
+    "x_train, x_test, y_train, y_test = spl(x, y, test_size= 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mohit\\AppData\\Roaming\\Python\\Python310\\site-packages\\sklearn\\ensemble\\_weight_boosting.py:527: FutureWarning: The SAMME.R algorithm (the default) is deprecated and will be removed in 1.6. Use the SAMME algorithm to circumvent this warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree = DecisionTreeClassifier(max_depth = 1)\n",
+    "model = AdaBoostClassifier(n_estimators=100)\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00         8\n",
+      "           1       1.00      0.86      0.92        14\n",
+      "           2       0.80      1.00      0.89         8\n",
+      "\n",
+      "    accuracy                           0.93        30\n",
+      "   macro avg       0.93      0.95      0.94        30\n",
+      "weighted avg       0.95      0.93      0.93        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gradient Boost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.model_selection import train_test_split as spl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_iris()\n",
+    "x = data.data\n",
+    "y = data.target\n",
+    "x_train, x_test, y_train, y_test = spl(x, y, test_size= 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = GradientBoostingClassifier(n_estimators=100)\n",
+    "model.fit(x_train, y_train)\n",
+    "y_pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        10\n",
+      "           1       1.00      0.82      0.90        11\n",
+      "           2       0.82      1.00      0.90         9\n",
+      "\n",
+      "    accuracy                           0.93        30\n",
+      "   macro avg       0.94      0.94      0.93        30\n",
+      "weighted avg       0.95      0.93      0.93        30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
